Add builder API for capabilities (#WSDK-435) Fixed
* Add builder API for capabilities
* Add additional test cases
* Support Java7

Change-Id: I74a066b4dc913f3eba499b703a1e4e967d003c1f
Signed-off-by: Stefan Birrer <stefan.birrer@phenixrts.com>